--- a/css/styles.css
+++ b/css/styles.css
@@ -227,3 +227,14 @@ section.your-active-class .landing__container::after {
 		           rotate(-360deg);
 	}
 }
+
+/* Media query for responsive design */
+
+
+@media (max-width: 576px) {
+
+    header h1{
+        margin-top: 3em ;
+        margin-bottom: 0.5em ;
+    }
+ }
