Adding ReadME File

--- a/css/styles.css
+++ b/css/styles.css
@@ -238,3 +238,11 @@ section.your-active-class .landing__container::after {
         margin-bottom: 0.5em ;
     }
  }
+
+ .text-alight-right{
+    text-align: right;
+ }
+
+ .text-alight-center{
+    text-align: center;
+ }
